# platypus

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  baseGameLogic.cpp  baseGameLogic.h  baseGameLogic.hpp  common.h  common.hpp  platypus.cpp  platypus.h  platypus.hpp  serviceProvider.cpp  serviceProvider.hpp  settings.cpp  settings.h  settings.hpp
application_layer/: iPlatform.hpp  platform.cpp  platform.h  platform.hpp  platformFactory.hpp  windowsPlatform.cpp  windowsPlatform.hpp  windowsUtils.cpp
application_layer/file_system/: IFileSystem.h  IFileSystem.hpp  standardFileSystem.cpp  standardFileSystem.h  standardFileSystem.hpp
application_layer/window/: IWindow.h  IWindow.hpp  windowFactory.cpp  windowFactory.h  windowFactory.hpp  windowsWindow.cpp  windowsWindow.h  windowsWindow.hpp
audio/: iAudioSystem.hpp
audio/core_audio/: coreAudioSystem.cpp  coreAudioSystem.hpp  wasapiChannel.cpp  wasapiChannel.hpp
cmake/: FindZLIB.cmake  config.cmake  funcs.cmake
entities/: entity.cpp  entity.h  entity.hpp  entityFactory.cpp  entityFactory.hpp  iEntityManager.hpp
entities/components/: entityComponent.hpp  movementComponent2d.cpp  movementComponent2d.hpp  physicsComponent.cpp  physicsComponent.hpp  positionComponent.cpp  positionComponent.hpp  renderComponent2d.cpp  renderComponent2d.hpp  renderComponent3d.cpp  renderComponent3d.hpp  transformComponent2d.cpp  transformComponent2d.hpp  transformComponent3d.cpp  transformComponent3d.hpp
events/: dataField.hpp  eventManager.cpp  eventManager.hpp  iDataManager.hpp  iEventManager.hpp
events/events/: collisionEvent.hpp  dataChangeEvent.hpp  iEvent.hpp  inputEvent.hpp  newPhysicsComponentEvent.hpp  newRenderComponentEvent.hpp  quitGameEvent.hpp  removePhysicsComponentEvent.hpp  removeRenderComponentEvent.hpp
exceptions/: creationException.hpp  platypusException.hpp
input/: command.hpp  input.hpp  inputManager.cpp  inputManager.hpp  inputType.hpp
input/devices/: iInputDevice.hpp
libraries/: CMakeLists.txt  libzip_include.hpp
physics/: force.hpp  iPhysicsSystem.hpp  physicsSystem.cpp  physicsSystem.hpp  rigidBodyObject.cpp  rigidBodyObject.hpp  utils.cpp  utils.hpp
physics/shapes/: circleShape.cpp  circleShape.hpp  collisions.cpp  collisions.hpp  iShape.hpp  rectangleShape.cpp  rectangleShape.hpp  shapeFactory.cpp  shapeFactory.hpp
platform/: iPlatform.hpp  platformFactory.cpp  utils.hpp  windowsPlatform.cpp  windowsPlatform.hpp  windowsUtils.cpp
platform/file_system/: iFileSystem.hpp
platform/window/: iWindow.hpp  windowsWindow.cpp  windowsWindow.hpp
renderer/: IRenderer.h  IRenderer.hpp  color.cpp  color.hpp  commonMesh.hpp  directXRenderer.cpp  directXRenderer.h  directXRenderer.hpp  graphics.cpp  graphics.hpp  iMesh.hpp  iPixelShader.hpp  iRenderer.hpp  iRendererState.hpp  iShaderManager.hpp  iTexture.hpp  iVertexShader.hpp  material.hpp  ptAddressOverscanMode.hpp  rendererFactory.cpp  rendererFactory.h  rendererFactory.hpp  scene.cpp  scene.hpp  screenElementScene.cpp  screenElementScene.hpp  texelOverscanMode.hpp  textRenderer.cpp  textRenderer.hpp
renderer/directx/: directXAlphaPass.cpp  directXAlphaPass.hpp  directXMesh.cpp  directXMesh.hpp  directXObjectCreator.cpp  directXObjectCreator.hpp  directXPixelShader.cpp  directXPixelShader.hpp  directXRenderer.cpp  directXRenderer.hpp  directXShaderLoader.cpp  directXShaderLoader.hpp  directXTexture.cpp  directXTexture.hpp  directXVertexShader.cpp  directXVertexShader.hpp  dxCommonMeshes.cpp  dxCommonMeshes.hpp  dxShaderManager.cpp  dxShaderManager.hpp  wicTextureLoader.cpp  wicTextureLoader.hpp
renderer/scene_nodes/: alphaSceneNode.hpp  cameraNode.cpp  cameraNode.hpp  iSceneNode.hpp  meshNode.cpp  meshNode.hpp  orthographicCameraNode.cpp  orthographicCameraNode.hpp  perspectiveCameraNode.cpp  perspectiveCameraNode.hpp  rectangleNode.cpp  rectangleNode.hpp  renderPass.hpp  rootNode.cpp  rootNode.hpp  sceneNode.cpp  sceneNode.hpp  sceneNodeProperties.hpp  spriteNode.cpp  spriteNode.hpp  textNode.cpp  textNode.hpp
resource_cache/: iResourceCache.hpp  resourceCache.cpp  resourceCache.hpp
resource_cache/loaders/: audioLoader.cpp  audioLoader.hpp  directXMeshLoader.cpp  directXMeshLoader.hpp  directXPixelShaderLoader.cpp  directXPixelShaderLoader.hpp  directXTextureLoader.cpp  directXTextureLoader.hpp  directXVertexShaderLoader.cpp  iResourceLoader.hpp  meshLoader.cpp  meshLoader.hpp  pixelShaderLoader.cpp  pixelShaderLoader.hpp  stringLoader.hpp  textureLoader.cpp  textureLoader.hpp  vertexShaderLoader.cpp  vertexShaderLoader.hpp
resource_cache/resources/: audioResource.cpp  audioResource.hpp  meshResource.cpp  meshResource.hpp  pixelShaderResource.cpp  pixelShaderResource.hpp  protobufResource.hpp  resource.cpp  resource.hpp  resourceType.cpp  resourceType.hpp  stringResourceData.hpp  textureResource.cpp  textureResource.hpp  vertexShaderResource.cpp  vertexShaderResource.hpp
resource_cache/stores/: iResourceStore.hpp  resourceStoreFactory.cpp  resourceStoreFactory.hpp  zipResourceStore.cpp  zipResourceStore.hpp
tests/: CMakeLists.txt  catch_main.cpp  mockEngine.hpp  mockGameLogic.hpp  platypusTests.cpp
tests/events/: eventManagerTests.cpp  mockEvent.hpp
tests/renderer/: mockRenderer.hpp  mockShaderManager.hpp
tests/resource_cache/: mockResourceCache.hpp  resourceCache.cpp  resourceCacheTests.cpp
tests/resource_cache/loaders/: audioLoaderTests.cpp  mockResourceLoader.hpp  pixelShaderLoaderTests.cpp  textureLoaderTests.cpp  vertexShaderLoaderTests.cpp
tests/resource_cache/resources/: mockResource.hpp
tests/resource_cache/stores/: mockResourceStore.hpp
tests/utilities/: encoding.cpp
tests/utilities/logging/: mockLoggingSystem.hpp
tests/utilities/time/: mockClock.hpp
ui/: dynamicText.cpp  dynamicText.hpp  staticText.cpp  staticText.hpp
utilities/: encoding.cpp  encoding.h  encoding.hpp  safeDelete.hpp  time.cpp  time.h  time.hpp  uuid.cpp  uuid.hpp  wildcardMatch.cpp  wildcardMatch.hpp
views/: IScreenElement.h  IScreenElement.hpp  IView.h  IView.hpp  humanView.cpp  humanView.h  humanView.hpp  iView.hpp
(+37 files in other folders)
